# demo-py-esub

./: .gitignore  .nojekyll  README.md  index.html  index.qmd  pyproject.toml  run.sh  search.json
.github/workflows/: quarto-publish.yml
analysis/: tlf-01-disposition.html  tlf-01-disposition.qmd  tlf-02-population.html  tlf-02-population.qmd  tlf-03-baseline.html  tlf-03-baseline.qmd  tlf-04-efficacy-ancova.html  tlf-04-efficacy-ancova.qmd  tlf-05-ae-summary.html  tlf-05-ae-summary.qmd  tlf-06-specific.html  tlf-06-specific.qmd
output/: tlf_efficacy_ancova.rtf
python-package/demo001/: __init__.py  baseline.py  efficacy.py  population.py  safety.py  utils.py
tests/: __init__.py  test_utils.py
